# hello_cg

./: README.md
games101/home01/: CMakeLists.txt  main.cpp
games101/home02/: CMakeLists.txt  main.cpp  rasterizer.cpp
games101/home03/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp
games101/home04/: main.cpp
games101/home05/: Renderer.cpp  Triangle.hpp
games101/home06/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  unit_test.cpp
games101/home07/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
hello_cgal/: CMakeLists.txt
hello_cgal/hello_world/: CMakeLists.txt  array_convex_hull_2.cpp  convex_hull_yz.cpp  exact.cpp  surprising.cpp  three_points_one_segment.cpp
hello_cgal/polyhedron/: CMakeLists.txt  polyhedron_prog_color.cpp  polyhedron_prog_cube.cpp  polyhedron_prog_off.cpp  polyhedron_prog_planes.cpp  polyhedron_prog_simple.cpp  polyhedron_prog_subdiv.cpp  polyhedron_prog_tetra.cpp  polyhedron_prog_vector.cpp
hello_cgal/stl_examples/: CMakeLists.txt  stl_viewer.cpp
hello_cgal/surface_mesh/: CMakeLists.txt  check_orientation.cpp  sm_bgl.cpp  sm_circulators.cpp  sm_iterators.cpp  sm_kruskal.cpp  sm_memory.cpp  sm_points.cpp  sm_properties.cpp
hello_libigl/: CMakeLists.txt
hello_libigl/hello_world/: CMakeLists.txt  draw_mesh.cpp  hello_world.cpp
hello_libigl/signed_distance/: CMakeLists.txt  signed_distance.cpp
hello_mc/: CMakeLists.txt  charles_mc_types.h  main.cpp  marching_cubes.cpp  marching_cubes.h  marching_cubes_test.cpp  mc_lookup_tables.cpp  mc_lookup_tables.h
hello_mc33/: CMakeLists.txt  idea.md
hello_mc33/dvega68/: CMakeLists.txt
hello_mc33/dvega68/include/: MC33.h
hello_mc33/dvega68/src/: grid3d.cpp  hello_world.cpp  mc33.cpp  mc33_test.cpp  official_glut_example.cpp  surface.cpp
hello_mc33/include/: MC33.h
hello_mc33/normal_implement/: CMakeLists.txt  bug_fix_record.py  charles_mc33_type.cpp  charles_mc33_type.h  mc33.cpp  mc33.h  mc33_cache.cpp  mc33_cache.h  mc33_global_test.h  mc33_lookup_table.cpp  mc33_lookup_table.h  mc33_test.cpp  signed_distances_iface.cpp  signed_distances_iface.h
hello_mc33/normal_implement/cmake/: config.cmake.in
hello_mc33/normal_implement/proto/: tensor_flat.proto
hello_mc33/src/: MC33.cpp  chaos.cpp  grid3d.cpp  hello_world.cpp  surface.cpp
hello_mc33/without_table/: CMakeLists.txt  basic_type.h  cgl.cpp  cgl.h  charles_test.h  main.cpp  mc33.cpp  mc33.h
